snapshots/truth__parse__abi__tests__bad_token.snap
---
source: src/parse/abi.rs
expression: "expect_parse_error(\"invalid token\", r##\"a(&)\"##).trim()"
---
error: invalid token
  ┌─ <input>:1:3
  │
1 │ a(&)
  │   ^ invalid token
